# rockchip-rk30xx-mk808

./: .config  Makefile  Module.symvers  README.md  build_mk808_omegamoon  build_mk808_omegamoon_dvi_1080p  build_mk808_omegamoon_dvi_720p  build_mk808_omegamoon_hdmi_1080p  build_mk808_omegamoon_hdmi_720p  build_mk808b_omegamoon  build_omegamoon_base  build_omegamoon_mk808b  flash_mk808_omegamoon  mkkrnlimg
arch/arm/: Makefile
arch/arm/configs/: bqCurie_defconfig  bqEdison_defconfig  mk808-dvi-1080p_defconfig  mk808-dvi-720p_defconfig  mk808-hdmi-1080p_defconfig  mk808-hdmi-720p_defconfig  mk808_defconfig  mk808b_defconfig  rk3066_mk808b_defconfig  rk30_hamburger_defconfig  rk30_hotdog_defconfig  rk30_hotdog_ti_defconfig  rk30_pizza_defconfig
arch/arm/mach-rk29/: Kconfig
arch/arm/mach-rk2928/: board-rk2928-a720-tps65910.c  board-rk2928-sdk-act8931.c
arch/arm/mach-rk30/: Kconfig  Makefile  board-rk30-box-key.c  board-rk30-box-wm8326.c  board-rk30-box.c  board-rk30-omegamoon.c  board-rk30-phonepad-key.c  board-rk30-phonepad.c  board-rk30-sdk-sdmmc.c  board-rk30-sdk-tps65910.c  board-rk30-sdk-vmac.c  board-rk30-sdk-wm8326.c  board-rk30-sdk.c  board-rk3066b-m701.c  clock.c  clock_data.uu.1GHz_easypad  clock_data.uu.512_bqEdison  clock_data.uu.512_riko  clock_data.uu.unknown_a9  common.c  cpufreq.c  ddr.c.new  ddr.uu  ddr_freq.uu  devices.c  dvfs.c  pm.c  pwm_sram.c  rk29_charge_lowpower.c
arch/arm/plat-rk/: Kconfig  Makefile  rk_camera.c  sram.c  usb_detect.c  vpu_mem.uu  vpu_service.uu
block/: Kconfig.iosched  genhd.c
drivers/cpufreq/: Kconfig  Makefile
drivers/gpio/: Kconfig
drivers/gpu/mali/: Makefile  include  mali  ump
drivers/gpu/mali/DX910-SW-99003-r3p2-01rel0/x11/xf86-video-mali-0.0.1/: Makefile.am  README.txt  autogen.sh  configure.ac  sconscript  xorg.conf
drivers/gpu/mali/DX910-SW-99003-r3p2-01rel0/x11/xf86-video-mali-0.0.1/man/: Makefile.in
drivers/gpu/mali/DX910-SW-99003-r3p2-01rel0/x11/xf86-video-mali-0.0.1/src/: Makefile.am  mali_dri.c  mali_dri.h  mali_exa.c  mali_fbdev.c  mali_fbdev.h  mali_lcd.c  sconscript
drivers/i2c/: i2c-core.c
drivers/i2c/busses/: Kconfig  i2c-rk30-adapter.c  i2c-rk30.c
drivers/input/: Kconfig  Makefile
drivers/input/gsensor/: mma7660.c  mma8452.c
drivers/input/keyboard/: Kconfig  rk29_keys.c
drivers/input/misc/: rk_board_id.c
drivers/input/remotectl/: Kconfig  rkxx_remotectl.c
drivers/input/touchscreen/: Kconfig  Makefile  ct36x_ts.c  goodix9xx_tool.c  goodix_touch_82x.c  gt8110_malata.c  gt8110_ts.c  gt811_malata.c  gt9xx.c  gt9xx_update.c  malata.h  rk29_i2c_goodix.c  sintek_3FA16.c  wacom_w8001.c
drivers/media/video/: Makefile  adv7180.c  gc0308.c  gc2035.c  gt2005.c  hi253.c  hi704.c  ov2659.c  ov5640.c  ov5640_c8002.c  rk29_camera_oneframe.c  rk30_camera_oneframe.c  sid130B.c
drivers/mfd/: Kconfig  Makefile  rk610-core.c  tps65910-core.c  tps65910.c  twl6030-irq.c  wm831x-core.c
drivers/misc/: Kconfig  Makefile
drivers/misc/3g_module/: Makefile
drivers/misc/bp/: Kconfig  Makefile  bp-auto.c
drivers/misc/gps/: rk29_gps.c
drivers/misc/rk29_modem/: modem_rockchip_demo.c  rk29_modem.c  rk29_modem.h
drivers/mmc/host/: rk29_sdmmc.c
drivers/mtd/rknand/: rknand_base_ko.c
drivers/net/: Kconfig  rk29_vmac.c
drivers/power/: Kconfig  Makefile  oz8806_battery.c  parameter.c  parameter.h  rk29_charger_display.c  rk30_adc_battery.c  rk30_factory_adc_battery.c
drivers/regulator/: Kconfig  core.c  tps65910-regulator.c
drivers/rtc/: Kconfig  Makefile  rtc-tps65910.c
drivers/staging/: Kconfig  Makefile
drivers/staging/sn/: Kconfig  Makefile  rk_sn.c
drivers/switch/: switch_class.c
drivers/usb/: Kconfig  Makefile
drivers/usb/ES603_driver/: AlphaTec.c  AlphaTec.h  (+14 more)
drivers/video/: Kconfig  fbmon.c  rk29_fb.c  rk29_fb.h  wimo.c
fs/proc/: Makefile  property.c
include/config/: auto.conf  auto.conf.cmd  tristate.conf
include/linux/: bp-auto.h  cpufreq.h  display-sys.h  fb.h  goodix_touch_82x.h  gt811.h  gt8110.h  gt9xx.h  hdmi-itv.h  mma7660.h  rk_board_id.h  rk_fb.h  sensor-dev.h  version.h  videodev2.h  wimo.h
kernel/power/: wakelock.c
omegamoon/: rkcrc  rkflashtool  zImage.img
sound/core/: pcm_native.c
sound/usb/: card.c  endpoint.c
(+404 files in other folders)
